2000-06-22  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c, smtpserver/mxverify.c:
	    Further commentary from  bind-workers  told me that unless
	    the AA-bit (authoritative answer) is set, the received ADDATA
	    isn't possibly good enough to trust - some of A/AAAAs may have
	    expired.  Thus we shall use that reply section for A/AAAA only
	    if AA-bit is set.

2000-06-21  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* smtpserver/mxverify.c, transports/smtp/smtp.c:
	    Made smtpserver MXVERIFY to use DNS ADDITIONAL DATA,
	    and reorganized A record collection so that if some
	    MX server does not have A, that is asked for it
	    explicitely, and if ipv6 is in use, if AAAA data
	    does not exist for a server, it is asked for.
	    In case ipv6 is not in use, this collapses into plain
	    A type data retrieval.

	* lib/selfaddrs.c:
	    Removed a test which is never true.

	* transports/smtp/smtp.c:
	    Some more tuning of  getmxrr()  pathology processing.

2000-06-20  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Use  zgetifaddress() for '-L iface:eth0' binding.

	* configure.in, include/libz.h, lib/Makefile.in,
	  lib/selfaddrs.c, lib/zgetifaddress.c:
	    Autoconfigure  BSDI derived  getifaddrs()  call,
	    and have sensible IOCTL set for both interface
	    list, and for interface address lookup code.

	* scheduler/mailq.c:
	    One-off in array realloc() biting us at Solaris..

	* transports/smtp/smtp.c, nam/smtp.8:
	    Coded '-L' option processing to bind to named local
	    interface.

	* lib/selfaddrs.c:
	    Experimental SIOCGLIFCONF code for IPv6 speaking
	    some-BSD systems -- to pick IPv6 interface addresses
	    from the system.

	* transports/smtp/smtp.c, transports/smtp/smtp.h:
	    When doing   getmxrr()  for MX data, will use also
	    the DNS supplied ADDITIONAL DATA segment materiel
	    for MX machine addresses.
